# software-metco

./: .travis.yml  README.md
metco/scripts/metrics/: .gitignore  calculateContributions  calculateCoverages  calculateEpsilonInd  generationalDistanceReferenceFront  mergeFrontsExperiments  parseConf.tab.c  parseConf.tab.h  parseLine.tab.c  parseLine.tab.h  parseMetric.tab.c  parseMetric.tab.h  parseParExp.tab.c  parseParExp.tab.h  parseSeqExp.tab.c  parseSeqExp.tab.h
metco/src/: Metco.files  Metco.includes
metco/src/plugins/algorithms/MOEAD_MPP/: MOEAD_MPP.cpp  MOEAD_MPP.h  weights_100_inds.w  weights_25_inds.w
metco/src/plugins/algorithms/MPP_Checker/: MPP_Checker.cpp  MPP_Checker.h
metco/src/plugins/algorithms/NSGA2/: NSGA2.cpp
metco/src/plugins/decompositions/Tchebycheff/: Tchebycheff.cpp
metco/src/plugins/outputPrinters/PlainText/: PlainText.cpp
metco/src/plugins/problems/MenuPlanning/: Constants.h  ConstantsOld.h  MenuPlanning.cpp  MenuPlanning.h
metco/src/skeleton/: EA.cpp  EA.h  Individual.cpp  Individual.h
metco/src/skeleton/main/: Makefile  Makefile.am  Makefile.in  build.sh  dependencies.txt  makefile_algorithm  makefile_conversion  makefile_crossover  makefile_decomposition  makefile_exchange_selector  makefile_init_pop_island_loader  makefile_localSearch  makefile_migration_selector  makefile_migration_topology  makefile_multiobjectivization  makefile_mutation  makefile_output_printer  makefile_problem  makefile_score  metcoSeq.cpp
metco/src/skeleton/utils/: utils.cpp  utils.h
